--- a/demo/components/AppLayout/base.css
+++ b/demo/components/AppLayout/base.css
@@ -1,3 +1,4 @@
+/* BASE STYLES */
 html {
     overflow: hidden;
     font-family: var(--font-family);
@@ -22,3 +23,4 @@ p {
 a {
     text-decoration: none;
 }
+/* BASE STYLES  end*/
