--- a/demo/components/AppLayout/index.css
+++ b/demo/components/AppLayout/index.css
@@ -1,5 +1,5 @@
 .container {
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     margin-left: 0px;
 }
@@ -10,7 +10,7 @@
 
 aside {
     width: 250px;
-    height: 100vh;
+    height: 100%;
     color: #333;
     flex-grow: 0;
     flex-shrink: 0;
@@ -25,5 +25,6 @@ aside {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+    height: 100%;
+    overflow: auto;
 }
