--- a/demo/components/app.css
+++ b/demo/components/app.css
@@ -5,6 +5,11 @@ html {
     font-size: var(--x4);
     line-height: var(--line-height);
 }
+html,
+body,
+main {
+    height: 100%;
+}
 h1,
 h2,
 h3,
