--- a/components/styles/all_styles.css
+++ b/components/styles/all_styles.css
@@ -49,8 +49,8 @@
     --mobile-small: 375px;
 
     /* FONT VARIABLES */
-    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans',
-        'Droid Sans', 'Helvetica Neue', sans-serif;
+    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol';
     --line-height: calc(var(--x4) * 1.5);
     --font-weight-regular: 400;
     --font-weight-bold: 700;
