--- a/website/components/SideBar/index.css
+++ b/website/components/SideBar/index.css
@@ -1,4 +1,13 @@
 .sidbar_nav {
+    & ul {
+        margin-left: 0;
+    }
+    & li {
+        list-style: none;
+    }
+    & a {
+        text-decoration: none;
+    }
     & .title {
         line-height: 42px;
         padding: 0 0 0 30px;
