--- a/website/components/PreViewBlock/index.css
+++ b/website/components/PreViewBlock/index.css
@@ -7,7 +7,7 @@
     padding: 8px 32px 9px 16px;
     height: auto;
     min-height: auto;
-    margin: 0 0 16px 0;
+    margin-top: 32px;
     border: 1px solid rgba(11, 31, 53, 0.1);
     overflow: hidden;
 }
