--- a/components/styles/all_styles.css
+++ b/components/styles/all_styles.css
@@ -4,23 +4,26 @@
     --color_orange_75: var(--custom-color_02, #ffcc00);
     --color_white_25: var(--custom-color_03, #fff6d1);
     --color_white_50: var(--custom-color_04, #ffffcc);
-    --color_purple_75: var(--custom-color_05, #660099);
-    --color_purple: var(--custom-color_06, #4f196d);
-    --color_blue: var(--custom-color_07, #330066);
-    --color_green: var(--custom-color_08, #66cc00);
-    --color_green_75: var(--custom-color_09, #00cc00);
-    --color_white: var(--custom-color_10, #ffffff);
-    --color_black: var(--custom-color_11, #000000);
-    --color_gray: var(--custom-color_12, #666666);
-    --color_gray_75: var(--custom-color_13, #999999);
-    --color_gray_50: var(--custom-color_14, #cccccc);
-    --color_gray_25: var(--custom-color_15, #e3e3e3);
-    --color_black_50: var(--custom-color_16, rgba(0, 0, 0, 0.5));
+    --color_purple_25: var(--custom-color_05, #9900ff);
+    --color_purple_50: var(--custom-color_06, #660099);
+    --color_purple_75: var(--custom-color_07, #4f196d);
+    --color_purple: var(--custom-color_08, #330066);
+    --color_green: var(--custom-color_09, #66cc00);
+    --color_green_75: var(--custom-color_10, #00cc00);
+    --color_white: var(--custom-color_11, #ffffff);
+    --color_black: var(--custom-color_12, #000000);
+    --color_gray: var(--custom-color_13, #666666);
+    --color_gray_75: var(--custom-color_14, #999999);
+    --color_gray_50: var(--custom-color_15, #cccccc);
+    --color_gray_25: var(--custom-color_16, #e3e3e3);
+    --color_black_50: var(--custom-color_17, rgba(0, 0, 0, 0.5));
+    --color_black_0: var(--custom-color_18, rgba(0, 0, 0, 0.1));
 
     /* SIZE VARIABLES */
     --base-size: 4;
     --x0_25: calc(0.25 * var(--base-size) * 1px);
     --x1: calc(var(--base-size) * 1px);
+    --x1_5: calc(1.5 * var(--base-size) * 1px);
     --x2: calc(2 * var(--base-size) * 1px);
     --x2_5: calc(2.5 * var(--base-size) * 1px);
     --x3: calc(3 * var(--base-size) * 1px);
@@ -31,14 +34,26 @@
     --x6: calc(6 * var(--base-size) * 1px);
     --x7: calc(7 * var(--base-size) * 1px);
     --x8: calc(8 * var(--base-size) * 1px);
+    --x9: calc(9 * var(--base-size) * 1px);
+    --x10: calc(10 * var(--base-size) * 1px);
+    --x11: calc(11 * var(--base-size) * 1px);
+    --x12: calc(12 * var(--base-size) * 1px);
+    --x13: calc(13 * var(--base-size) * 1px);
+    --x14: calc(14 * var(--base-size) * 1px);
+    --x15: calc(15 * var(--base-size) * 1px);
+    --x16: calc(16 * var(--base-size) * 1px);
+    --x17: calc(17 * var(--base-size) * 1px);
+    --x18: calc(18 * var(--base-size) * 1px);
+    --x: var(--line-height);
 
     /* BORDER SIZE VARIABLES*/
     --border-width: var(--x0_25);
 
     /* SHADOW VARIABLES*/
-    --shadow-small: 0 var(--x0_25) var(--x1) 0 var(--color_14);
-    --shadow-medium: 0 var(--x1) var(--x2) 0 var(--color_14);
-    --shadow-big: 0 var(--x2) var(--x4) 0 var(--color_14);
+    --shadow-color: var(--color_black_50);
+    --shadow-small: 0 var(--x0_25) var(--x1) 0;
+    --shadow-medium: 0 var(--x1) var(--x2) 0;
+    --shadow-big: 0 var(--x2) var(--x4) 0;
 
     /* MEDIA QUERIES */
     --desktop: 1280px;
@@ -49,14 +64,16 @@
     --mobile-small: 375px;
 
     /* FONT VARIABLES */
-    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-        'Segoe UI Emoji', 'Segoe UI Symbol';
+    --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans',
+        'Droid Sans', 'Helvetica Neue', sans-serif;
     --line-height: calc(var(--x4) * 1.5);
     --font-weight-regular: 400;
     --font-weight-bold: 700;
 
     /* BORDER RADIUS VARIABLE*/
-    --border-radius: var(--x1);
+    --border-radius-x1: var(--x1);
+    --border-radius-50: 50%;
+    --radius: var(--x1);
 
     /* PADDING VARIABLES */
     --padding-x8: 0 var(--x8);
@@ -67,9 +84,232 @@
     --padding-x2: 0 var(--x2);
 }
 
-html,
-*,
-:before,
-:after {
+html {
     line-height: 1.5;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+svg {
+    display: inline-block;
+    fill: 'currentcolor';
+    height: 1.25em;
+    max-width: 100%;
+    width: 100%;
+    position: relative;
+    user-select: none;
+    vertical-align: text-bottom;
+}
+
+/* SIZES CLASS */
+.x1 {
+    --x: var(--x1);
+}
+.x2 {
+    --x: var(--x2);
+}
+.x3 {
+    --x: var(--x3);
+}
+.x4 {
+    --x: var(--x4);
+}
+.x5 {
+    --x: var(--x5);
+}
+.x6 {
+    --x: var(--x6);
+}
+.x7 {
+    --x: var(--x7);
+}
+.x8 {
+    --x: var(--x8);
+}
+.x9 {
+    --x: var(--x9);
+}
+.x10 {
+    --x: var(--x10);
+}
+.x11 {
+    --x: var(--x11);
+}
+.x12 {
+    --x: var(--x12);
+}
+.x13 {
+    --x: var(--x13);
+}
+.x14 {
+    --x: var(--x14);
+}
+.x15 {
+    --x: var(--x15);
+}
+.x16 {
+    --x: var(--x16);
+}
+.x17 {
+    --x: var(--x17);
+}
+.x18 {
+    --x: var(--x18);
+}
+
+/* COLOR CLASS */
+.color-orange {
+    --color: var(--color_orange);
+}
+.bg-color-orange {
+    --bg-color: var(--color_orange);
+}
+
+.color-orange-75 {
+    --color: var(--color_orange_75);
+}
+.bg-color-orange-75 {
+    --bg-color: var(--color_orange_75);
+}
+
+.color-white {
+    --color: var(--color_white);
+}
+.bg-color-white {
+    --bg-color: var(--color_white);
+}
+
+.color-white-25 {
+    --color: var(--color_white_25);
+}
+.bg-color-white-25 {
+    --bg-color: var(--color_white_25);
+}
+
+.color-white-50 {
+    --color: var(--color_white_50);
+}
+.bg-color-white-50 {
+    --bg-color: var(--color_white_50);
+}
+
+.color-purple {
+    --color: var(--color_purple);
+}
+.bg-color-purple {
+    --bg-color: var(--color_purple);
+}
+
+.color-purple-25 {
+    --color: var(--color_purple_25);
+}
+.bg-color-purple-25 {
+    --bg-color: var(--color_purple_25);
+}
+
+.color-purple-50 {
+    --color: var(--color_purple_50);
+}
+.bg-color-purple-50 {
+    --bg-color: var(--color_purple_50);
+}
+
+.color-purple-75 {
+    --color: var(--color_purple_75);
+}
+.bg-color-purple-75 {
+    --bg-color: var(--color_purple_75);
+}
+
+.color-green {
+    --color: var(--color_green);
+}
+.bg-color-green {
+    --bg-color: var(--color_green);
+}
+
+.color-green-75 {
+    --color: var(--color_green_75);
+}
+.bg-color-green-75 {
+    --bg-color: var(--color_green_75);
+}
+
+.color-black {
+    --color: var(--color_black);
+}
+.bg-color-black {
+    --bg-color: var(--color_black);
+}
+
+.color-black-50 {
+    --color: var(--color_black_50);
+}
+.bg-color-black-50 {
+    --bg-color: var(--color_black_50);
+}
+
+.color-gray {
+    --color: var(--color_gray);
+}
+.bg-color-gray {
+    --bg-color: var(--color_gray);
+}
+
+.color-gray-75 {
+    --color: var(--color_gray_75);
+}
+.bg-color-gray-75 {
+    --bg-color: var(--color_gray_75);
+}
+
+.color-gray-50 {
+    --color: var(--color_gray_50);
+}
+.bg-color-gray-50 {
+    --bg-color: var(--color_gray_50);
+}
+
+.color-gray-25 {
+    --color: var(--color_gray_25);
+}
+.bg-color-gray-25 {
+    --bg-color: var(--color_gray_25);
+}
+
+/* RADIUS CLASS */
+.border-radius-x1 {
+    --radius: var(--border-radius-x1);
+}
+.border-radius-50 {
+    --radius: var(--border-radius-50);
+}
+
+/* scrollbar styles */
+::-webkit-scrollbar {
+    width: 4px;
+    height: 3px;
+}
+::-webkit-scrollbar-button {
+    background-color: #666;
+    display: none;
+}
+::-webkit-scrollbar-track {
+    background-color: #999;
+}
+::-webkit-scrollbar-track-piece {
+    background-color: var(--color_gray_50);
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--color_gray);
+    border-radius: 3px;
+}
+::-webkit-scrollbar-corner {
+    background-color: #999;
+}
+::-webkit-resizer {
+    background-color: #666;
 }
