--- a/website/components/AppLayout/index.css
+++ b/website/components/AppLayout/index.css
@@ -1,30 +1,30 @@
+/* LAYOUT */
 .container {
-    min-height: 100%;
-    display: flex;
+    height: 100%;
+    transition: all 300ms ease-out;
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 100%;
     margin-left: 0px;
+    overflow: hidden;
 }
-
 .container.no_margin_left {
     margin-left: -250px;
 }
-
 aside {
     width: 250px;
-    height: 100%;
     color: #333;
-    flex-grow: 0;
-    flex-shrink: 0;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     background: #eee;
+    transition: all 300ms ease-out;
 }
-
 .page_content {
     background: #fff;
     color: #000;
-    flex-grow: 1;
-    flex-shrink: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    overflow-y: hidden;
     height: 100%;
-    overflow: auto;
 }
+/* LAYOUT end*/
