--- a/website/components/Content/index.css
+++ b/website/components/Content/index.css
@@ -3,8 +3,6 @@
     background: #eee;
     display: flex;
     align-items: center;
-    flex-grow: 0;
-    flex-shrink: 0;
     height: 36px;
 }
 .menu_icon {
@@ -24,57 +22,5 @@
 .content {
     padding: var(--x4) var(--x8);
     overflow-y: scroll;
-    flex-grow: 1;
-    flex-shrink: 1;
+    height: calc(100% - 36px);
 }
-.preview.code {
-    background: #fff;
-}
-.preview {
-    border-radius: 4px;
-    padding: 8px 32px 9px 16px;
-    height: auto;
-    min-height: auto;
-    margin: 0 0 16px 0;
-    border: 1px solid rgba(11, 31, 53, 0.1);
-    overflow: hidden;
-}
-.preview:focus {
-    height: auto;
-}
-.preview.code .title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.title div {
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-.title .copy_btn {
-    flex-grow: 0;
-    flex-shrink: 0;
-    width: 60px;
-}
-.preview .title {
-    background: #eee;
-    margin: -8px -32px 16px -16px;
-    padding: 8px 0 8px 16px;
-}
-.preview .title h2 {
-    margin: 0 0 0 0;
-    font-weight: 400;
-}
-.copy_btn {
-    color: #000;
-    padding: 4px 8px;
-    cursor: pointer;
-    border: 1px solid #aaa;
-    border-radius: var(--x1);
-    background: #fff;
-    visibility: hidden;
-}
-.preview:hover .copy_btn {
-    visibility: visible;
-}
-/* RIGHT STYLE end*/
