--- a/components/Shadows/index.html
+++ b/components/Shadows/index.html
@@ -1,17 +1,3 @@
-<!--Вынести в стили все кастомные стили -->
-<!--Неверные имена цыета переменных -->
-<div
-    style=" margin: 40px auto; max-width: 300px; padding: 20px; text-align: center; box-sizing: border-box; box-shadow: var(--shadow-small)"
->
-    SMALL SHADOW EXAMPLE
-</div>
-<div
-    style=" margin: 40px auto; max-width: 300px; padding: 20px; text-align: center; box-sizing: border-box; box-shadow: var(--shadow-medium)"
->
-    MEDIUM SHADOW EXAMPLE
-</div>
-<div
-    style=" margin: 40px auto; max-width: 300px; padding: 20px; text-align: center; box-sizing: border-box; box-shadow: var(--shadow-big)"
->
-    BIG SHADOW EXAMPLE
-</div>
+<div style="box-shadow: var(--shadow-small)">SMALL SHADOW EXAMPLE</div>
+<div style="box-shadow: var(--shadow-medium)">MEDIUM SHADOW EXAMPLE</div>
+<div style="box-shadow: var(--shadow-big)">BIG SHADOW EXAMPLE</div>
