--- a/website/components/SideBar/index.css
+++ b/website/components/SideBar/index.css
@@ -1,20 +1,25 @@
 .sidbar_nav {
+    & h3 {
+        margin-top: 0;
+    }
     & ul {
         margin-left: 0;
+        margin-bottom: 0;
     }
     & li {
         list-style: none;
+        height: 48px;
     }
-    & a {
-        text-decoration: none;
-    }
+
     & .title {
-        line-height: 42px;
         padding: 0 0 0 30px;
     }
 
     & a {
         display: block;
+        height: 48px;
+        font-size: 20px;
+        line-height: 1.5;
         padding: 9px 12px;
         padding-right: 30px;
         padding-left: 30px;
