--- a/website/components/Content/index.css
+++ b/website/components/Content/index.css
@@ -3,11 +3,15 @@
     background: #eee;
     display: flex;
     align-items: center;
-    height: 36px;
+    height: 48px;
+
+    & h3 {
+        margin-top: 0;
+    }
 }
 .menu_icon {
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
     padding: var(--x2_5);
     box-sizing: content-box;
