--- a/website/components/AppLayout/index.css
+++ b/website/components/AppLayout/index.css
@@ -16,7 +16,7 @@ aside {
     color: #333;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    background: #eee;
+    background: rgb(244, 245, 247);
     transition: all 300ms ease-out;
 }
 .page_content {
