--- a/website/components/SideBar/index.css
+++ b/website/components/SideBar/index.css
@@ -11,6 +11,9 @@
         height: 48px;
     }
 
+    & li.active {
+        color: rgb(0, 82, 204);
+    }
     & .title {
         padding: 0 0 0 30px;
     }
@@ -34,10 +37,12 @@
 
     & a.active {
         opacity: 1;
+        color: rgb(0, 82, 204);
     }
 
     & a.active,
     & a.active:hover {
         background: rgba(51, 51, 51, 0.1);
+        color: rgb(0, 82, 204);
     }
 }
