--- a/website/components/app.css
+++ b/website/components/app.css
@@ -21,40 +21,48 @@ section {
     padding-top: 32px;
 }
 
-html {
+html,
+.root {
     font-size: 16px;
     line-height: 24px;
 }
-body {
+body,
+.article {
+    font-family: sans-serif;
     font-size: 1rem;
     line-height: 1.5rem;
     margin: auto;
 }
-h1 {
-    font-size: 4.25rem;
-    line-height: 4.5rem;
+h1,
+.h1 {
+    font-size: 2.375rem;
+    line-height: 3rem;
     margin-top: 1.5rem;
     margin-bottom: 3rem;
 }
-h2 {
-    font-size: 2.625rem;
+h2,
+.h2 {
+    font-size: 1.75rem;
     line-height: 3rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
-h3 {
-    font-size: 1.625rem;
-    line-height: 3rem;
+h3,
+.h3 {
+    font-size: 1.3125rem;
+    line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 0rem;
 }
-h4 {
+h4,
+.h4 {
     font-size: 1rem;
     line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 0rem;
 }
-h5 {
+h5,
+.h5 {
     font-size: 1rem;
     line-height: 1.5rem;
     margin-top: 1.5rem;
@@ -78,7 +86,8 @@ ol ul {
 }
 
 /* Let's make sure all's aligned */
-hr {
+hr,
+.hr {
     border: 1px solid;
     margin: -1px 0;
 }
