--- a/website/components/app.css
+++ b/website/components/app.css
@@ -2,6 +2,7 @@ html {
     color: rgb(66, 82, 110);
     font-size: var(--x4);
     font-family: var(--font-family);
+    font-family: 'open_sans';
     min-width: 0;
     overflow: hidden;
 }
@@ -28,7 +29,6 @@ html,
 }
 body,
 .article {
-    font-family: sans-serif;
     font-size: 1rem;
     line-height: 1.5rem;
     margin: auto;
