--- a/website/components/app.css
+++ b/website/components/app.css
@@ -1,3 +1,10 @@
+html,
+*,
+:before,
+:after {
+    box-sizing: content-box;
+}
+
 html {
     color: rgb(66, 82, 110);
     font-size: var(--x4);
@@ -28,41 +35,41 @@ html,
     line-height: 24px;
 }
 body,
-.article {
+:global(.article) {
     font-size: 1rem;
     line-height: 1.5rem;
     margin: auto;
 }
 h1,
-.h1 {
+:global(.h1) {
     font-size: 2.375rem;
     line-height: 3rem;
     margin-top: 1.5rem;
     margin-bottom: 3rem;
 }
 h2,
-.h2 {
+:global(.h2) {
     font-size: 1.75rem;
     line-height: 3rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
 h3,
-.h3 {
+:global(.h3) {
     font-size: 1.3125rem;
     line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 0rem;
 }
 h4,
-.h4 {
+:global(.h4) {
     font-size: 1rem;
     line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 0rem;
 }
 h5,
-.h5 {
+:global(.h5) {
     font-size: 1rem;
     line-height: 1.5rem;
     margin-top: 1.5rem;
@@ -75,19 +82,17 @@ pre,
 table,
 blockquote {
     margin-top: 0rem;
-    margin-bottom: 1.5rem;
 }
 ul ul,
 ol ol,
 ul ol,
 ol ul {
     margin-top: 0rem;
-    margin-bottom: 0rem;
 }
 
 /* Let's make sure all's aligned */
 hr,
-.hr {
+:global(.hr) {
     border: 1px solid;
     margin: -1px 0;
 }
