--- a/website/components/Content/index.css
+++ b/website/components/Content/index.css
@@ -1,30 +1,33 @@
 /* RIGHT SIDE STYLE */
 .top_bar {
-    background: #eee;
+    background: rgb(244, 245, 247);
     display: flex;
     align-items: center;
     height: 48px;
 
     & h3 {
+        color: #70727b;
         margin-top: 0;
     }
 }
 .menu_icon {
+    fill: #70727b;
     width: 20px;
     height: 20px;
     cursor: pointer;
     padding: var(--x2_5);
-    box-sizing: content-box;
 }
 .title_component {
     padding: 0 20px;
-    line-height: 36px;
 }
-.version_component {
-    line-height: 36px;
-}
+
 .content {
-    padding: var(--x4) var(--x8);
-    overflow-y: scroll;
-    height: calc(100% - 36px);
+    padding: 0 var(--x8);
+    height: calc(100% - 48px);
+    max-width: 1300px;
+    margin: 0 auto;
+}
+.content-wrapper {
+    overflow-y: auto;
+    height: calc(100% - 48px);
 }
