--- a/components/Shadows/index.css
+++ b/components/Shadows/index.css
@@ -1,5 +1,6 @@
 :root {
-    --shadow-small: 0 var(--x0_25) var(--x1) 0 var(--color_gray_25);
-    --shadow-medium: 0 var(--x1) var(--x2) 0 var(--color_gray_25);
-    --shadow-big: 0 var(--x2) var(--x4) 0 var(--color_gray_25);
+    --shadow-color: var(--color_black_50);
+    --shadow-small: 0 var(--x0_25) var(--x1) 0;
+    --shadow-medium: 0 var(--x0_5) var(--x2) 0;
+    --shadow-big: 0 var(--x1) var(--x4) 0;
 }
