--- a/components/Shadows/index.html
+++ b/components/Shadows/index.html
@@ -1,3 +1,18 @@
-<div style="box-shadow: var(--shadow-small)">SMALL SHADOW EXAMPLE</div>
-<div style="box-shadow: var(--shadow-medium)">MEDIUM SHADOW EXAMPLE</div>
-<div style="box-shadow: var(--shadow-big)">BIG SHADOW EXAMPLE</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Shadows</title>
+        <link rel="stylesheet" href="../styles/styles.css" />
+        <link rel="stylesheet" href="../styles/variables.css" />
+        <link rel="stylesheet" href="./demo.css" />
+        <link rel="stylesheet" href="./index.css" />
+    </head>
+    <body>
+        <div style="box-shadow:var(--shadow-small) var(--shadow-color)" class="demo-box">SMALL SHADOW EXAMPLE</div>
+        <div style="box-shadow: var(--shadow-medium)  var(--shadow-color)" class="demo-box">MEDIUM SHADOW EXAMPLE</div>
+        <div style="box-shadow: var(--shadow-big)  var(--shadow-color)" class="demo-box">BIG SHADOW EXAMPLE</div>
+    </body>
+</html>
