--- a/website/components/SideBarMenu/index.css
+++ b/website/components/SideBarMenu/index.css
@@ -3,33 +3,33 @@
     height: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 48px 1fr;
-
-    & ul {
-        overflow-y: auto;
-        grid-row: 2/3;
-    }
-    & a {
-        display: block;
-        padding: 9px 12px;
-        padding-right: 30px;
-        padding-left: 30px;
-        color: #333;
-        text-decoration: none;
-        opacity: 0.6;
-        -webkit-transition: 0.1s;
-        transition: 0.1s;
-    }
-    & a:hover {
-        background: rgba(51, 51, 51, 0.1);
-    }
-    & a.active {
-        opacity: 1;
-    }
-    & a.active,
-    & a.active:hover {
-        background: rgba(51, 51, 51, 0.1);
-    }
 }
+.component-list ul {
+    overflow-y: auto;
+    grid-row: 2/3;
+}
+.component-list a {
+    display: block;
+    padding: 9px 12px;
+    padding-right: 30px;
+    padding-left: 30px;
+    color: #333;
+    text-decoration: none;
+    opacity: 0.6;
+    -webkit-transition: 0.1s;
+    transition: 0.1s;
+}
+.component-list a:hover {
+    background: rgba(51, 51, 51, 0.1);
+}
+.component-list a.active {
+    opacity: 1;
+}
+.component-list a.active,
+.component-list a.active:hover {
+    background: rgba(51, 51, 51, 0.1);
+}
+
 .title {
     padding: 0 0 0 16px;
     color: #70727b;
