[dev1] fix demo title

--- a/website/components/DemoPageTitle/index.css
+++ b/website/components/DemoPageTitle/index.css
@@ -1,8 +1,6 @@
-.demoPageTitle {
-    & h2 {
-        display: inline-block;
-        margin-bottom: 0;
-    }
+.demoPageTitle h2 {
+    display: inline-block;
+    margin-bottom: 0;
 }
 
 .version {
